deploy: 23258d0726e42d96fe3d5b8dc897b6cfaf540a2e

--- a/genindex.html
+++ b/genindex.html
@@ -160,6 +160,8 @@
       </ul></li>
       <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.answer_question">answer_question() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
+      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.app_js">app_js() (in module pyquizhub.adapters.web.server)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -360,6 +362,10 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.load_config">load_config() (in module pyquizhub.adapters.web.server)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.load_quiz">load_quiz() (pyquizhub.core.engine.engine.QuizEngine method)</a>
 </li>
   </ul></td>
@@ -385,6 +391,8 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.proxy_request">proxy_request() (in module pyquizhub.adapters.web.server)</a>
+</li>
       <li>
     pyquizhub.adapters.web.server
 
@@ -392,6 +400,8 @@
         <li><a href="adapters/web/server.html#module-pyquizhub.adapters.web.server">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pyquizhub.core.engine
 
@@ -399,8 +409,6 @@
         <li><a href="core/engine.html#module-pyquizhub.core.engine">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pyquizhub.core.storage
 
@@ -438,15 +446,21 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.serve_static">serve_static() (in module pyquizhub.adapters.web.server)</a>
-</li>
       <li><a href="core/storage.html#pyquizhub.core.storage.sql_storage.SQLStorageManager">SQLStorageManager (class in pyquizhub.core.storage.sql_storage)</a>
 </li>
+      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.start_quiz">start_quiz() (in module pyquizhub.adapters.web.server)</a>
+
+      <ul>
+        <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.start_quiz">(pyquizhub.core.engine.engine.QuizEngine method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core/engine.html#pyquizhub.core.engine.engine.QuizEngine.start_quiz">start_quiz() (pyquizhub.core.engine.engine.QuizEngine method)</a>
-</li>
       <li><a href="core/storage.html#pyquizhub.core.storage.storage_manager.StorageManager">StorageManager (class in pyquizhub.core.storage.storage_manager)</a>
+</li>
+      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.style">style() (in module pyquizhub.adapters.web.server)</a>
+</li>
+      <li><a href="adapters/web/server.html#pyquizhub.adapters.web.server.submit_answer">submit_answer() (in module pyquizhub.adapters.web.server)</a>
 </li>
   </ul></td>
 </tr></table>
