--- a/_modules/pyquizhub/core/engine/engine.html
+++ b/_modules/pyquizhub/core/engine/engine.html
@@ -88,7 +88,7 @@
 <span class="kn">import</span><span class="w"> </span><span class="nn">json</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">.safe_evaluator</span><span class="w"> </span><span class="kn">import</span> <span class="n">SafeEvaluator</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">.json_validator</span><span class="w"> </span><span class="kn">import</span> <span class="n">QuizJSONValidator</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">pyquizhub.config.config_utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">get_logger</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">pyquizhub.config.settings</span><span class="w"> </span><span class="kn">import</span> <span class="n">get_logger</span>
 
 
 <div class="viewcode-block" id="QuizEngine">
